ansible/roles_ocp_workloads/ocp4_workload_example_shared_cluster/files/hello_openshift_service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: hello-openshift
spec:
  selector:
    app: hello-openshift
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
