ansible/roles_ocp_workloads/ocp4_workload_example_shared_cluster/files/hello_openshift_route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: hello-openshift
  name: hello-openshift
spec:
  host:
  to:
    kind: Service
    name: hello-openshift
